istio/spbootmicro-nodeport.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: movie
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: movie
        version: v1
    spec:
      containers:
      - name: movie
        image: naveenkrishiv/spbootmovies
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movie
  labels:
    app: movie
spec:
  selector:
    app: movie
  ports:
  - port: 8080
    nodePort: 31001
    targetPort: 8080
  type: NodePort
