istio/spbootmicro.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: movie
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: movie
        version: v1
    spec:
      containers:
      - name: movie
        image: naveenkrishiv/spbootmovies
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movie
  labels:
    app: movie
spec:
  selector:
    app: movie
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: director
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: director
        version: v1
    spec:
      containers:
      - name: director
        image: naveenkrishiv/spbootdirector
        ports:
        - name: http
          containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: director
  labels:
    app: director
spec:
  selector:
    app: director
  ports:
  - name: http
    port: 8081
    targetPort: 8081
---
