istio/spbootmicro-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spboot-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movie
spec:
  hosts:
  - "*"
  gateways:
  - spboot-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/movie
    route:
    - destination:
        host: movie.default.svc.cluster.local
        #host: movie
        port:
          number: 8080
